@@ -4,11 +4,12 @@ glibc (2.7-6) unstable; urgency=low
   * patches/localedata/locale-ks_IN.diff: new locale contributed by Rakesh
     Pandit.  Closes: #457351.
   * patches/series: enable patches/any/cvs-vfscanf.diff.  Closes: #453408.
+  * Remove DEB_BUILD_OPTIONS=parallel=n, as it is deprecated.
 
   [ Clint Adams ]
   * debhelper.in/nscd.init: use lsb output functions.  Closes: #457661.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 30 Dec 2007 20:30:49 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 01 Jan 2008 23:06:46 +0100
 
 glibc (2.7-5) unstable; urgency=low
 
